# sobrio-outil-

./: .env.example  .gitignore  .graphifyignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml
report/: README.md  generate.py  pyproject.toml  requirements.txt
report/queries/: by_model.sql  by_workspace.sql  footprint_avoided.sql  monthly_total.sql  reco_adoption.sql  reco_savings.sql
report/templates/: report.html.j2
report/tests/: conftest.py  test_report_antigreenwashing.py  test_report_e2e.py  test_report_no_inline_sql.py  test_report_template.py
router/: CONVERGENCE_LEDGER.md  RAPPORT_FINAL_ORCHESTRATEUR.md  README.md  RUNBOOK.md  bench.py  bench_embed.py  pyproject.toml  requirements-embed.txt  requirements-ml.txt
router/data/: LICENSES.md  distill.py  generate_corpus.py  public_datasets.py  quality_report.py
router/eval/: embed_fixtures.py  gate.py  harness.py  harness_embed.py  loader.py
router/panels/: R5-r3.json  R5-r4.json  R5-r5.json  R6-r0.json  R6-r1.json  R6-r2.json  R6-r3.json  R6-r4.json  R7-r0.json  R7-r1.json
router/sobrio_router/: __init__.py  adapter.py  embed.py  features.py  heuristic.py  interface.py  ml.py  safe.py  twostage.py  types.py
router/tests/: conftest.py  conftest_helpers.py  test_router_adapter.py  test_router_bench_embed.py  test_router_ci_workflow.py  test_router_corrections_r0.py  test_router_corrections_r1.py  test_router_data_corpus.py  test_router_data_distill.py  (+20 more)
warehouse/: README.md  aggregate.py  alembic.ini  pyproject.toml  requirements.txt  seed.py
(+178 files in other folders)
