[project]
name = "sobrio-router"
version = "0.1.0"
description = "Lot B — routeur de recommandation Sobrio (classifieur, pas de LLM). R1 : socle + v0 heuristique."
requires-python = ">=3.12"
# Aucune dépendance en R1 (stdlib seule) — cf. docs/decisions/ROUTEUR_CLASSIFIEUR.md.
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sobrio_router"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
